# dispel4py-client

./: .gitignore  ConvertPy.py  ConvertToPE.py  IsPrimeOrig.py  Laminar_Notebook_Sample.ipynb  README.md  client.py  config.ini  convert.py  deep_learn_search.py  globals.py  imports.py  laminar.py  laminarv2.py  pyproject.toml  realtime_prep.py  register.py  requirements.txt  requirements_client.txt  web_client.py
Aroma/: PythonParser.py  PythonParserBase.py  PythonParserListener.py  tfidf.pkl  vocab.pkl
CLIENT_EXAMPLES/: .IsPrime.py.swp  AstroPhysics.py  IsPrime.py  SensorIoT.py  SensorWorkflow.py  WordCount.py  coordinates.txt  isprimePE.py  isprime_wf.py  sample.py  sample_pe.py  sensor_data_1000.json  sensor_wf.py  wordcount_wf.py
laminar/: __main__.py  argument_parser.py  cli.py  global_variables.py  screen_printer.py
laminar/aroma/: PythonLexer.interp  PythonLexer.py  PythonLexer.tokens  PythonLexerBase.py  PythonParser.interp  similar.py  tfidf.pkl  vocab.pkl
laminar/client/: d4pyclient.py
laminar/client/web/: authentication_data.py  (+6 more)
laminar/clitools/: explaincommand.py  register.py  remove.py  run.py  search.py  update_description.py
laminar/conversion/: ConvertPy.py  ConvertToPE.py
laminar/llms/: GeminiConnector.py  LLMConnector.py  OpenAIConnector.py  core.py  encoder.py
laminar/search/: deep_learn_search.py
resources/: coordinates.txt
testing/isprime/: IsPrime.py
testing/seismic/: Copy-Uniq-OpStationList-NetworkStation.txt  realtime_prep.py  stream_AK_BMR_0.mseed
testing/sensor/: SensorWorkflow.py
testing/wordcount/: wordcount_wf.py
(+3 files in other folders)
